<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fondo_ver"
    android:orientation="vertical" >
	
	<RelativeLayout 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" >

		<ImageButton
			android:id="@+id/imagen_lugares" 
			android:layout_width="120dp" 
			android:layout_height="105dp" 
			android:contentDescription="@string/twitter" 
			android:background="@null"
			android:layout_marginLeft="22dp" 
			android:onClick="ir_lugares" 
			android:src="@drawable/ver" />
		
		<TextView
		    android:id="@+id/texto_lugares"
		    android:layout_width="fill_parent"
		    android:gravity="center"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/imagen_lugares"
		    android:layout_toLeftOf="@+id/imagen_iglesias"
		    android:clickable="false"
		    android:contentDescription="@string/lugares"
		    android:text="@string/lugares" />

		<ImageButton
			android:id="@+id/imagen_iglesias" 
			android:layout_width="120dp" 
			android:layout_height="105dp" 
			android:layout_alignParentRight="true" 
			android:layout_alignParentTop="true" 
			android:layout_marginRight="22dp" 
			android:background="@null" 
			android:contentDescription="@string/facebook" 
			android:onClick="ir_iglesias" 
			android:src="@drawable/iglesias" />
		
		<TextView
		    android:id="@+id/texto_iglesias"
		    android:gravity="center"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/imagen_iglesias"
		    android:layout_toRightOf="@+id/imagen_lugares"
		    android:clickable="false"
		    android:contentDescription="@string/iglesias"
		    android:text="@string/iglesias" />

   </RelativeLayout>
   
   <RelativeLayout 
    	android:layout_width="match_parent" 
    	android:layout_height="wrap_content" >

		<ImageButton
			android:id="@+id/imagen_museos" 
			android:layout_width="120dp" 
			android:layout_height="105dp" 
			android:contentDescription="@string/twitter" 
			android:background="@null"
			android:layout_marginLeft="22dp" 
			android:onClick="ir_museos" 
			android:src="@drawable/museos" />
		
		<TextView
		    android:id="@+id/texto_museos"
		    android:layout_width="fill_parent"
		    android:gravity="center"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/imagen_museos"
		    android:layout_toLeftOf="@+id/imagen_atras"
		    android:clickable="false"
		    android:contentDescription="@string/museos"
		    android:text="@string/museos" />

		<ImageButton
			android:id="@+id/imagen_atras" 
			android:layout_width="120dp" 
			android:layout_height="105dp" 
			android:layout_alignParentRight="true" 
			android:layout_alignParentTop="true" 
			android:layout_marginRight="22dp" 
			android:background="@null" 
			android:contentDescription="@string/facebook" 
			android:onClick="ir_atras" 
			android:src="@drawable/atras" />
		
		<TextView
		    android:id="@+id/texto_atras"
		    android:gravity="center"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_below="@id/imagen_atras"
		    android:layout_toRightOf="@+id/imagen_museos"
		    android:clickable="false"
		    android:contentDescription="@string/atras"
		    android:text="@string/atras" />

   </RelativeLayout>
</LinearLayout> 